First exercise (#9)
* Separating functions to more functions

* After code review with Aviv

* To review

* Fixes after code review with aviv

* Fixes after code review with aviv

* Fixes after code review with aviv

* Finished chapter 4

* Finished chapter 4 after breaking code

* After code review with Aviv

* after first code review

* to merge

---------

Co-authored-by: Liron <lironattal@walla.com>